My changes for hometask "Add ShoppingCart model"